// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`L&A (logic and accuracy) flow 1`] = `
@media (min-width:1024px) {

}

@media (min-width:1440px) {

}

<div>
  <div
    class="hfPnIU"
  >
    <section
      class="hfivsF"
    >
      <img
        alt="VotingWorks logo"
        class="byCqlY"
        src="/votingworks-wordmark-black.svg"
      />
      <div
        class="kuXZyB"
      >
        <h1>
          Test Deck
           Precinct Tally Report for:
           
          District 5
        </h1>
        <h2>
          Mock General Election Choctaw 2020
        </h2>
        <p>
          Wednesday, August 26, 2020
          , 
          Choctaw County
          , 
          State of Mississippi
          <br />
          <span
            class="iybVtA"
          >
            This report was created on 
            Tuesday, November 3, 2020, 10:22:00 PM UTC
            .
          </span>
        </p>
      </div>
      <div
        class="zVyqD"
      >
        <div
          class="cNiWWZ"
        >
          <h3>
            Ballots by Voting Method
          </h3>
          <table
            class="gyNoQG"
            data-testid="voting-method-table"
          >
            <tbody>
              <tr
                data-testid="absentee"
              >
                <td
                  class="crFDJf"
                >
                  Absentee
                </td>
                <td
                  class="dIqrGb"
                >
                  0
                </td>
              </tr>
              <tr
                data-testid="standard"
              >
                <td
                  class="crFDJf"
                >
                  Precinct
                </td>
                <td
                  class="dIqrGb"
                >
                  8
                </td>
              </tr>
              <tr
                data-testid="total"
              >
                <td
                  class="crFDJf"
                >
                  <strong>
                    Total Ballots Cast
                  </strong>
                </td>
                <td
                  class="dIqrGb"
                >
                  <strong>
                    8
                  </strong>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          class="dxhxtV"
        >
          <div
            class="kuXZyB"
            data-testid="results-table-775020876"
          >
            <p
              class="iybVtA"
            >
              United States
            </p>
            <h3>
              President
            </h3>
            <p
              class="iybVtA"
            >
              <span
                class="fUIxJs"
              >
                8 ballots
                 cast /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 undervotes
              </span>
            </p>
            <table
              class="fqMSrf"
            >
              <tbody>
                <tr
                  data-testid="775020876-775031988"
                >
                  <th
                    colspan="3"
                  >
                    Presidential Electors for Joe Biden for President and Kamala Harris for Vice President
                  </th>
                  <td>
                    2
                  </td>
                </tr>
                <tr
                  data-testid="775020876-775031987"
                >
                  <th
                    colspan="3"
                  >
                    Presidential Electors for Donald J. Trump for President and Michael R. Pence for Vice President
                  </th>
                  <td>
                    2
                  </td>
                </tr>
                <tr
                  data-testid="775020876-775031989"
                >
                  <th
                    colspan="3"
                  >
                    Presidential Electors for Phil Collins for President and Bill Parker for Vice President
                  </th>
                  <td>
                    2
                  </td>
                </tr>
                <tr
                  data-testid="775020876-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td>
                    2
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="dxhxtV"
        >
          <div
            class="kuXZyB"
            data-testid="results-table-775020877"
          >
            <p
              class="iybVtA"
            >
              United States
            </p>
            <h3>
              Senate 
            </h3>
            <p
              class="iybVtA"
            >
              <span
                class="fUIxJs"
              >
                8 ballots
                 cast /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 undervotes
              </span>
            </p>
            <table
              class="fqMSrf"
            >
              <tbody>
                <tr
                  data-testid="775020877-775031985"
                >
                  <th
                    colspan="3"
                  >
                    Mike Espy
                  </th>
                  <td>
                    2
                  </td>
                </tr>
                <tr
                  data-testid="775020877-775031986"
                >
                  <th
                    colspan="3"
                  >
                    Cindy Hyde-Smith
                  </th>
                  <td>
                    2
                  </td>
                </tr>
                <tr
                  data-testid="775020877-775031990"
                >
                  <th
                    colspan="3"
                  >
                    Jimmy Edwards
                  </th>
                  <td>
                    2
                  </td>
                </tr>
                <tr
                  data-testid="775020877-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td>
                    2
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="dxhxtV"
        >
          <div
            class="kuXZyB"
            data-testid="results-table-775020872"
          >
            <p
              class="iybVtA"
            >
              US House Of Representatives
            </p>
            <h3>
              1st Congressional District
            </h3>
            <p
              class="iybVtA"
            >
              <span
                class="fUIxJs"
              >
                8 ballots
                 cast /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 undervotes
              </span>
            </p>
            <table
              class="fqMSrf"
            >
              <tbody>
                <tr
                  data-testid="775020872-775031978"
                >
                  <th
                    colspan="3"
                  >
                    Antonia Eliason
                  </th>
                  <td>
                    4
                  </td>
                </tr>
                <tr
                  data-testid="775020872-775031979"
                >
                  <th
                    colspan="3"
                  >
                    Trent Kelly
                  </th>
                  <td>
                    2
                  </td>
                </tr>
                <tr
                  data-testid="775020872-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td>
                    2
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="dxhxtV"
        >
          <div
            class="kuXZyB"
            data-testid="results-table-775020870"
          >
            <p
              class="iybVtA"
            >
              Northern District
            </p>
            <h3>
              Supreme Court District 3(Northern) Position 3
            </h3>
            <p
              class="iybVtA"
            >
              <span
                class="fUIxJs"
              >
                8 ballots
                 cast /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 undervotes
              </span>
            </p>
            <table
              class="fqMSrf"
            >
              <tbody>
                <tr
                  data-testid="775020870-775031976"
                >
                  <th
                    colspan="3"
                  >
                    Josiah Dennis Coleman
                  </th>
                  <td>
                    4
                  </td>
                </tr>
                <tr
                  data-testid="775020870-775031993"
                >
                  <th
                    colspan="3"
                  >
                    Percy L. Lynchard
                  </th>
                  <td>
                    2
                  </td>
                </tr>
                <tr
                  data-testid="775020870-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td>
                    2
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="hamhRS"
        >
          <div
            class="kuXZyB"
            data-testid="results-table-775020899"
          >
            <p
              class="iybVtA"
            >
              Election Commissioner 01
            </p>
            <h3>
              Election Commissioner  01
            </h3>
            <p
              class="iybVtA"
            >
              <span
                class="fUIxJs"
              >
                0 ballots
                 cast /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 undervotes
              </span>
            </p>
            <table
              class="fqMSrf"
            >
              <tbody>
                <tr
                  data-testid="775020899-775032015"
                >
                  <th
                    colspan="3"
                  >
                    Glynda Chaney Fulce
                  </th>
                  <td />
                </tr>
                <tr
                  data-testid="775020899-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="hamhRS"
        >
          <div
            class="kuXZyB"
            data-testid="results-table-775020900"
          >
            <p
              class="iybVtA"
            >
              Election Commissioner 02
            </p>
            <h3>
              Election Commissioner 02
            </h3>
            <p
              class="iybVtA"
            >
              <span
                class="fUIxJs"
              >
                0 ballots
                 cast /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 undervotes
              </span>
            </p>
            <table
              class="fqMSrf"
            >
              <tbody>
                <tr
                  data-testid="775020900-775032016"
                >
                  <th
                    colspan="3"
                  >
                    Charles Beck
                  </th>
                  <td />
                </tr>
                <tr
                  data-testid="775020900-775032017"
                >
                  <th
                    colspan="3"
                  >
                    Sharon Brooks
                  </th>
                  <td />
                </tr>
                <tr
                  data-testid="775020900-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="hamhRS"
        >
          <div
            class="kuXZyB"
            data-testid="results-table-775020901"
          >
            <p
              class="iybVtA"
            >
              Election Commissioner 03
            </p>
            <h3>
              Election Commissioner 03
            </h3>
            <p
              class="iybVtA"
            >
              <span
                class="fUIxJs"
              >
                0 ballots
                 cast /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 undervotes
              </span>
            </p>
            <table
              class="fqMSrf"
            >
              <tbody>
                <tr
                  data-testid="775020901-775032018"
                >
                  <th
                    colspan="3"
                  >
                    Dorothy Anderson
                  </th>
                  <td />
                </tr>
                <tr
                  data-testid="775020901-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="hamhRS"
        >
          <div
            class="kuXZyB"
            data-testid="results-table-775020902"
          >
            <p
              class="iybVtA"
            >
              Election Commissioner 04
            </p>
            <h3>
              Election Commissioner 04
            </h3>
            <p
              class="iybVtA"
            >
              <span
                class="fUIxJs"
              >
                0 ballots
                 cast /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 undervotes
              </span>
            </p>
            <table
              class="fqMSrf"
            >
              <tbody>
                <tr
                  data-testid="775020902-775032019"
                >
                  <th
                    colspan="3"
                  >
                    Willie Mae Guillory
                  </th>
                  <td />
                </tr>
                <tr
                  data-testid="775020902-775032020"
                >
                  <th
                    colspan="3"
                  >
                    Lewis Wright
                  </th>
                  <td />
                </tr>
                <tr
                  data-testid="775020902-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="dxhxtV"
        >
          <div
            class="kuXZyB"
            data-testid="results-table-775020903"
          >
            <p
              class="iybVtA"
            >
              Election Commissioner 05
            </p>
            <h3>
              Election Commissioner 05
            </h3>
            <p
              class="iybVtA"
            >
              <span
                class="fUIxJs"
              >
                8 ballots
                 cast /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 undervotes
              </span>
            </p>
            <table
              class="fqMSrf"
            >
              <tbody>
                <tr
                  data-testid="775020903-775032021"
                >
                  <th
                    colspan="3"
                  >
                    Ouida A Loper
                  </th>
                  <td>
                    4
                  </td>
                </tr>
                <tr
                  data-testid="775020903-775032022"
                >
                  <th
                    colspan="3"
                  >
                    Wayne McLeod
                  </th>
                  <td>
                    2
                  </td>
                </tr>
                <tr
                  data-testid="775020903-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td>
                    2
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="dxhxtV"
        >
          <div
            class="kuXZyB"
            data-testid="results-table-775020904"
          >
            <p
              class="iybVtA"
            >
              School Board District 5
            </p>
            <h3>
              School Board 05
            </h3>
            <p
              class="iybVtA"
            >
              <span
                class="fUIxJs"
              >
                8 ballots
                 cast /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 undervotes
              </span>
            </p>
            <table
              class="fqMSrf"
            >
              <tbody>
                <tr
                  data-testid="775020904-775032023"
                >
                  <th
                    colspan="3"
                  >
                    Michael D Thomas
                  </th>
                  <td>
                    4
                  </td>
                </tr>
                <tr
                  data-testid="775020904-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td>
                    4
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="dxhxtV"
        >
          <div
            class="kuXZyB"
            data-testid="results-table-750000017"
          >
            <p
              class="iybVtA"
            >
              State Of Mississippi
            </p>
            <h3>
              Ballot Measure 2
House Concurrent Resolution No. 47
            </h3>
            <p
              class="iybVtA"
            >
              <span
                class="fUIxJs"
              >
                8 ballots
                 cast /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 undervotes
              </span>
            </p>
            <table
              class="fqMSrf"
            >
              <tbody>
                <tr
                  data-testid="750000017-yes"
                >
                  <th
                    colspan="3"
                  >
                    Yes
                  </th>
                  <td>
                    4
                  </td>
                </tr>
                <tr
                  data-testid="750000017-no"
                >
                  <th
                    colspan="3"
                  >
                    No
                  </th>
                  <td>
                    4
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="dxhxtV"
        >
          <div
            class="kuXZyB"
            data-testid="results-table-750000018"
          >
            <p
              class="iybVtA"
            >
              State Of Mississippi
            </p>
            <h3>
              Ballot Measure 3
House Bill 1796 - Flag Referendum
            </h3>
            <p
              class="iybVtA"
            >
              <span
                class="fUIxJs"
              >
                8 ballots
                 cast /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 undervotes
              </span>
            </p>
            <table
              class="fqMSrf"
            >
              <tbody>
                <tr
                  data-testid="750000018-yes"
                >
                  <th
                    colspan="3"
                  >
                    Yes
                  </th>
                  <td>
                    4
                  </td>
                </tr>
                <tr
                  data-testid="750000018-no"
                >
                  <th
                    colspan="3"
                  >
                    No
                  </th>
                  <td>
                    4
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="dxhxtV"
        >
          <div
            class="kuXZyB"
            data-testid="results-table-750000015"
          >
            <p
              class="iybVtA"
            >
              State Of Mississippi
            </p>
            <h3>
              Ballot Measure 1
            </h3>
            <p
              class="iybVtA"
            >
              <span
                class="fUIxJs"
              >
                8 ballots
                 cast /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 undervotes
              </span>
            </p>
            <table
              class="fqMSrf"
            >
              <tbody>
                <tr
                  data-testid="750000015-yes"
                >
                  <th
                    colspan="3"
                  >
                    Yes
                  </th>
                  <td>
                    4
                  </td>
                </tr>
                <tr
                  data-testid="750000015-no"
                >
                  <th
                    colspan="3"
                  >
                    No
                  </th>
                  <td>
                    4
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="dxhxtV"
        >
          <div
            class="kuXZyB"
            data-testid="results-table-750000016"
          >
            <p
              class="iybVtA"
            >
              State Of Mississippi
            </p>
            <h3>
              Ballot Measure 1
            </h3>
            <p
              class="iybVtA"
            >
              <span
                class="fUIxJs"
              >
                8 ballots
                 cast /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 undervotes
              </span>
            </p>
            <table
              class="fqMSrf"
            >
              <tbody>
                <tr
                  data-testid="750000016-yes"
                >
                  <th
                    colspan="3"
                  >
                    Yes
                  </th>
                  <td>
                    4
                  </td>
                </tr>
                <tr
                  data-testid="750000016-no"
                >
                  <th
                    colspan="3"
                  >
                    No
                  </th>
                  <td>
                    4
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`L&A (logic and accuracy) flow 2`] = `
@media (min-width:1024px) {

}

@media (min-width:1440px) {

}

<div>
  <div
    aria-hidden="true"
    class="kQCdaK"
  >
    <div
      class="cSkaik"
    >
      <div
        class="seal"
        data-testid="printed-ballot-seal"
        id="printedBallotSealContainer"
      >
        <img
          alt=""
          class="hLVAuh"
          data-testid="printed-ballot-seal-image"
          src="/seals/Seal_of_Mississippi_BW.svg"
        />
      </div>
      <div
        class="gmiWky ballot-header-content"
      >
        <h2>
          Unofficial TEST Ballot
        </h2>
        <h3>
          
           
          Mock General Election Choctaw 2020
        </h3>
        <p>
          August 26, 2020
          <br />
          Choctaw County
          , 
          State of Mississippi
        </p>
      </div>
      <div
        class="cfpKDm"
      >
        <div
          class="gScWpb"
        >
          <svg
            height="128"
            shape-rendering="crispEdges"
            viewBox="0 0 21 21"
            width="128"
          >
            <path
              d="M0,0 h21v21H0z"
              fill="#FFFFFF"
            />
            <path
              d="M0 0h7v1H0zM9 0h1v1H9zM14,0 h7v1H14zM0 1h1v1H0zM6 1h1v1H6zM10 1h2v1H10zM14 1h1v1H14zM20,1 h1v1H20zM0 2h1v1H0zM2 2h3v1H2zM6 2h1v1H6zM8 2h5v1H8zM14 2h1v1H14zM16 2h3v1H16zM20,2 h1v1H20zM0 3h1v1H0zM2 3h3v1H2zM6 3h1v1H6zM8 3h3v1H8zM12 3h1v1H12zM14 3h1v1H14zM16 3h3v1H16zM20,3 h1v1H20zM0 4h1v1H0zM2 4h3v1H2zM6 4h1v1H6zM9 4h3v1H9zM14 4h1v1H14zM16 4h3v1H16zM20,4 h1v1H20zM0 5h1v1H0zM6 5h1v1H6zM9 5h1v1H9zM11 5h2v1H11zM14 5h1v1H14zM20,5 h1v1H20zM0 6h7v1H0zM8 6h1v1H8zM10 6h1v1H10zM12 6h1v1H12zM14,6 h7v1H14zM3 8h2v1H3zM6 8h2v1H6zM12 8h1v1H12zM17 8h2v1H17zM0 9h2v1H0zM5 9h1v1H5zM7 9h2v1H7zM11 9h2v1H11zM15 9h3v1H15zM19,9 h2v1H19zM0 10h2v1H0zM5 10h4v1H5zM12 10h4v1H12zM17 10h1v1H17zM20,10 h1v1H20zM1 11h1v1H1zM3 11h2v1H3zM8 11h4v1H8zM15 11h2v1H15zM19 11h1v1H19zM0 12h1v1H0zM2 12h2v1H2zM6 12h1v1H6zM8 12h1v1H8zM14,12 h7v1H14zM8 13h2v1H8zM13 13h1v1H13zM18,13 h3v1H18zM0 14h7v1H0zM8 14h3v1H8zM13 14h2v1H13zM17 14h2v1H17zM20,14 h1v1H20zM0 15h1v1H0zM6 15h1v1H6zM9 15h3v1H9zM13 15h2v1H13zM18 15h1v1H18zM0 16h1v1H0zM2 16h3v1H2zM6 16h1v1H6zM8 16h2v1H8zM11 16h1v1H11zM14 16h1v1H14zM16 16h1v1H16zM18 16h2v1H18zM0 17h1v1H0zM2 17h3v1H2zM6 17h1v1H6zM8 17h2v1H8zM12 17h1v1H12zM15 17h2v1H15zM0 18h1v1H0zM2 18h3v1H2zM6 18h1v1H6zM9 18h1v1H9zM11 18h2v1H11zM15 18h3v1H15zM19,18 h2v1H19zM0 19h1v1H0zM6 19h1v1H6zM13 19h1v1H13zM15 19h1v1H15zM17 19h1v1H17zM19,19 h2v1H19zM0 20h7v1H0zM10 20h3v1H10zM14 20h3v1H14zM18 20h2v1H18z"
              fill="#000000"
            />
          </svg>
        </div>
        <div>
          <div>
            <div>
              <div>
                Precinct
              </div>
              <strong>
                District 5
              </strong>
            </div>
            <div>
              <div>
                Ballot Style
              </div>
              <strong>
                5
              </strong>
            </div>
            <div>
              <div>
                Ballot ID
              </div>
              <strong
                class="fUIxJs"
              >
                Asdf1234Asdf12
              </strong>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="NVkwn"
    >
      <div
        class="jgYCbw"
      >
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              President
            </h3>
            <p
              class="eSpfPW"
            >
              <span
                class="hsgYyE"
              >
                Presidential Electors for Joe Biden for President and Kamala Harris for Vice President
              </span>
               
              / Democrat
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              Senate 
            </h3>
            <p
              class="eSpfPW"
            >
              <span
                class="hsgYyE"
              >
                Mike Espy
              </span>
               
              / Democrat
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              1st Congressional District
            </h3>
            <p
              class="eSpfPW"
            >
              <span
                class="hsgYyE"
              >
                Antonia Eliason
              </span>
               
              / Democrat
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              Supreme Court District 3(Northern) Position 3
            </h3>
            <p
              class="eSpfPW"
            >
              <span
                class="hsgYyE"
              >
                Josiah Dennis Coleman
              </span>
               
              / Nonpartisan
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              Election Commissioner 05
            </h3>
            <p
              class="eSpfPW"
            >
              <span
                class="hsgYyE"
              >
                Ouida A Loper
              </span>
               
              / Independent
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              School Board 05
            </h3>
            <p
              class="eSpfPW"
            >
              <span
                class="hsgYyE"
              >
                Michael D Thomas
              </span>
               
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              Ballot Measure 2
House Concurrent Resolution No. 47
            </h3>
            <p
              class="kdHchw"
            >
              YES
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              Ballot Measure 3
House Bill 1796 - Flag Referendum
            </h3>
            <p
              class="kdHchw"
            >
              YES
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              Ballot Measure 1
            </h3>
            <p
              class="kdHchw"
            >
              FOR APPROVAL OF EITHER Initiative No. 65 OR Alternative Measure No. 65 A
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              Ballot Measure 1
            </h3>
            <p
              class="kdHchw"
            >
              FOR Initiative Measure No. 65
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    class="kQCdaK"
  >
    <div
      class="cSkaik"
    >
      <div
        class="seal"
        data-testid="printed-ballot-seal"
        id="printedBallotSealContainer"
      >
        <img
          alt=""
          class="hLVAuh"
          data-testid="printed-ballot-seal-image"
          src="/seals/Seal_of_Mississippi_BW.svg"
        />
      </div>
      <div
        class="gmiWky ballot-header-content"
      >
        <h2>
          Unofficial TEST Ballot
        </h2>
        <h3>
          
           
          Mock General Election Choctaw 2020
        </h3>
        <p>
          August 26, 2020
          <br />
          Choctaw County
          , 
          State of Mississippi
        </p>
      </div>
      <div
        class="cfpKDm"
      >
        <div
          class="gScWpb"
        >
          <svg
            height="128"
            shape-rendering="crispEdges"
            viewBox="0 0 21 21"
            width="128"
          >
            <path
              d="M0,0 h21v21H0z"
              fill="#FFFFFF"
            />
            <path
              d="M0 0h7v1H0zM9 0h1v1H9zM14,0 h7v1H14zM0 1h1v1H0zM6 1h1v1H6zM10 1h2v1H10zM14 1h1v1H14zM20,1 h1v1H20zM0 2h1v1H0zM2 2h3v1H2zM6 2h1v1H6zM8 2h5v1H8zM14 2h1v1H14zM16 2h3v1H16zM20,2 h1v1H20zM0 3h1v1H0zM2 3h3v1H2zM6 3h1v1H6zM8 3h3v1H8zM12 3h1v1H12zM14 3h1v1H14zM16 3h3v1H16zM20,3 h1v1H20zM0 4h1v1H0zM2 4h3v1H2zM6 4h1v1H6zM9 4h3v1H9zM14 4h1v1H14zM16 4h3v1H16zM20,4 h1v1H20zM0 5h1v1H0zM6 5h1v1H6zM9 5h1v1H9zM11 5h2v1H11zM14 5h1v1H14zM20,5 h1v1H20zM0 6h7v1H0zM8 6h1v1H8zM10 6h1v1H10zM12 6h1v1H12zM14,6 h7v1H14zM3 8h2v1H3zM6 8h2v1H6zM12 8h1v1H12zM17 8h2v1H17zM0 9h2v1H0zM5 9h1v1H5zM7 9h2v1H7zM11 9h2v1H11zM15 9h3v1H15zM19,9 h2v1H19zM0 10h2v1H0zM5 10h4v1H5zM12 10h4v1H12zM17 10h1v1H17zM20,10 h1v1H20zM1 11h1v1H1zM3 11h2v1H3zM8 11h4v1H8zM15 11h2v1H15zM19 11h1v1H19zM0 12h1v1H0zM2 12h2v1H2zM6 12h1v1H6zM8 12h1v1H8zM14,12 h7v1H14zM8 13h2v1H8zM13 13h1v1H13zM18,13 h3v1H18zM0 14h7v1H0zM8 14h3v1H8zM13 14h2v1H13zM17 14h2v1H17zM20,14 h1v1H20zM0 15h1v1H0zM6 15h1v1H6zM9 15h3v1H9zM13 15h2v1H13zM18 15h1v1H18zM0 16h1v1H0zM2 16h3v1H2zM6 16h1v1H6zM8 16h2v1H8zM11 16h1v1H11zM14 16h1v1H14zM16 16h1v1H16zM18 16h2v1H18zM0 17h1v1H0zM2 17h3v1H2zM6 17h1v1H6zM8 17h2v1H8zM12 17h1v1H12zM15 17h2v1H15zM0 18h1v1H0zM2 18h3v1H2zM6 18h1v1H6zM9 18h1v1H9zM11 18h2v1H11zM15 18h3v1H15zM19,18 h2v1H19zM0 19h1v1H0zM6 19h1v1H6zM13 19h1v1H13zM15 19h1v1H15zM17 19h1v1H17zM19,19 h2v1H19zM0 20h7v1H0zM10 20h3v1H10zM14 20h3v1H14zM18 20h2v1H18z"
              fill="#000000"
            />
          </svg>
        </div>
        <div>
          <div>
            <div>
              <div>
                Precinct
              </div>
              <strong>
                District 5
              </strong>
            </div>
            <div>
              <div>
                Ballot Style
              </div>
              <strong>
                5
              </strong>
            </div>
            <div>
              <div>
                Ballot ID
              </div>
              <strong
                class="fUIxJs"
              >
                Asdf1234Asdf12
              </strong>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="NVkwn"
    >
      <div
        class="jgYCbw"
      >
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              President
            </h3>
            <p
              class="eSpfPW"
            >
              <span
                class="hsgYyE"
              >
                Presidential Electors for Donald J. Trump for President and Michael R. Pence for Vice President
              </span>
               
              / Republican
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              Senate 
            </h3>
            <p
              class="eSpfPW"
            >
              <span
                class="hsgYyE"
              >
                Cindy Hyde-Smith
              </span>
               
              / Republican
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              1st Congressional District
            </h3>
            <p
              class="eSpfPW"
            >
              <span
                class="hsgYyE"
              >
                Trent Kelly
              </span>
               
              / Republican
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              Supreme Court District 3(Northern) Position 3
            </h3>
            <p
              class="eSpfPW"
            >
              <span
                class="hsgYyE"
              >
                Percy L. Lynchard
              </span>
               
              / Nonpartisan
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              Election Commissioner 05
            </h3>
            <p
              class="eSpfPW"
            >
              <span
                class="hsgYyE"
              >
                Wayne McLeod
              </span>
               
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              School Board 05
            </h3>
            <p
              class="eSpfPW"
            >
              <span
                class="hsgYyE"
              >
                WRITE-IN
              </span>
               
              (write-in)
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              Ballot Measure 2
House Concurrent Resolution No. 47
            </h3>
            <p
              class="kdHchw"
            >
              NO
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              Ballot Measure 3
House Bill 1796 - Flag Referendum
            </h3>
            <p
              class="kdHchw"
            >
              NO
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              Ballot Measure 1
            </h3>
            <p
              class="kdHchw"
            >
              AGAINST BOTH Initiative Measure No. 65 AND Alternative Measure No. 65 A
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              Ballot Measure 1
            </h3>
            <p
              class="kdHchw"
            >
              FOR Alternative Measure 65 A
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    class="kQCdaK"
  >
    <div
      class="cSkaik"
    >
      <div
        class="seal"
        data-testid="printed-ballot-seal"
        id="printedBallotSealContainer"
      >
        <img
          alt=""
          class="hLVAuh"
          data-testid="printed-ballot-seal-image"
          src="/seals/Seal_of_Mississippi_BW.svg"
        />
      </div>
      <div
        class="gmiWky ballot-header-content"
      >
        <h2>
          Unofficial TEST Ballot
        </h2>
        <h3>
          
           
          Mock General Election Choctaw 2020
        </h3>
        <p>
          August 26, 2020
          <br />
          Choctaw County
          , 
          State of Mississippi
        </p>
      </div>
      <div
        class="cfpKDm"
      >
        <div
          class="gScWpb"
        >
          <svg
            height="128"
            shape-rendering="crispEdges"
            viewBox="0 0 21 21"
            width="128"
          >
            <path
              d="M0,0 h21v21H0z"
              fill="#FFFFFF"
            />
            <path
              d="M0 0h7v1H0zM9 0h1v1H9zM14,0 h7v1H14zM0 1h1v1H0zM6 1h1v1H6zM10 1h2v1H10zM14 1h1v1H14zM20,1 h1v1H20zM0 2h1v1H0zM2 2h3v1H2zM6 2h1v1H6zM8 2h5v1H8zM14 2h1v1H14zM16 2h3v1H16zM20,2 h1v1H20zM0 3h1v1H0zM2 3h3v1H2zM6 3h1v1H6zM8 3h3v1H8zM12 3h1v1H12zM14 3h1v1H14zM16 3h3v1H16zM20,3 h1v1H20zM0 4h1v1H0zM2 4h3v1H2zM6 4h1v1H6zM9 4h3v1H9zM14 4h1v1H14zM16 4h3v1H16zM20,4 h1v1H20zM0 5h1v1H0zM6 5h1v1H6zM9 5h1v1H9zM11 5h2v1H11zM14 5h1v1H14zM20,5 h1v1H20zM0 6h7v1H0zM8 6h1v1H8zM10 6h1v1H10zM12 6h1v1H12zM14,6 h7v1H14zM3 8h2v1H3zM6 8h2v1H6zM12 8h1v1H12zM17 8h2v1H17zM0 9h2v1H0zM5 9h1v1H5zM7 9h2v1H7zM11 9h2v1H11zM15 9h3v1H15zM19,9 h2v1H19zM0 10h2v1H0zM5 10h4v1H5zM12 10h4v1H12zM17 10h1v1H17zM20,10 h1v1H20zM1 11h1v1H1zM3 11h2v1H3zM8 11h4v1H8zM15 11h2v1H15zM19 11h1v1H19zM0 12h1v1H0zM2 12h2v1H2zM6 12h1v1H6zM8 12h1v1H8zM14,12 h7v1H14zM8 13h2v1H8zM13 13h1v1H13zM18,13 h3v1H18zM0 14h7v1H0zM8 14h3v1H8zM13 14h2v1H13zM17 14h2v1H17zM20,14 h1v1H20zM0 15h1v1H0zM6 15h1v1H6zM9 15h3v1H9zM13 15h2v1H13zM18 15h1v1H18zM0 16h1v1H0zM2 16h3v1H2zM6 16h1v1H6zM8 16h2v1H8zM11 16h1v1H11zM14 16h1v1H14zM16 16h1v1H16zM18 16h2v1H18zM0 17h1v1H0zM2 17h3v1H2zM6 17h1v1H6zM8 17h2v1H8zM12 17h1v1H12zM15 17h2v1H15zM0 18h1v1H0zM2 18h3v1H2zM6 18h1v1H6zM9 18h1v1H9zM11 18h2v1H11zM15 18h3v1H15zM19,18 h2v1H19zM0 19h1v1H0zM6 19h1v1H6zM13 19h1v1H13zM15 19h1v1H15zM17 19h1v1H17zM19,19 h2v1H19zM0 20h7v1H0zM10 20h3v1H10zM14 20h3v1H14zM18 20h2v1H18z"
              fill="#000000"
            />
          </svg>
        </div>
        <div>
          <div>
            <div>
              <div>
                Precinct
              </div>
              <strong>
                District 5
              </strong>
            </div>
            <div>
              <div>
                Ballot Style
              </div>
              <strong>
                5
              </strong>
            </div>
            <div>
              <div>
                Ballot ID
              </div>
              <strong
                class="fUIxJs"
              >
                Asdf1234Asdf12
              </strong>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="NVkwn"
    >
      <div
        class="jgYCbw"
      >
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              President
            </h3>
            <p
              class="eSpfPW"
            >
              <span
                class="hsgYyE"
              >
                Presidential Electors for Phil Collins for President and Bill Parker for Vice President
              </span>
               
              / Independent
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              Senate 
            </h3>
            <p
              class="eSpfPW"
            >
              <span
                class="hsgYyE"
              >
                Jimmy Edwards
              </span>
               
              / Libertarian
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              1st Congressional District
            </h3>
            <p
              class="eSpfPW"
            >
              <span
                class="hsgYyE"
              >
                WRITE-IN
              </span>
               
              (write-in)
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              Supreme Court District 3(Northern) Position 3
            </h3>
            <p
              class="eSpfPW"
            >
              <span
                class="hsgYyE"
              >
                WRITE-IN
              </span>
               
              (write-in)
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              Election Commissioner 05
            </h3>
            <p
              class="eSpfPW"
            >
              <span
                class="hsgYyE"
              >
                WRITE-IN
              </span>
               
              (write-in)
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              School Board 05
            </h3>
            <p
              class="eSpfPW"
            >
              <span
                class="hsgYyE"
              >
                Michael D Thomas
              </span>
               
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              Ballot Measure 2
House Concurrent Resolution No. 47
            </h3>
            <p
              class="kdHchw"
            >
              YES
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              Ballot Measure 3
House Bill 1796 - Flag Referendum
            </h3>
            <p
              class="kdHchw"
            >
              YES
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              Ballot Measure 1
            </h3>
            <p
              class="kdHchw"
            >
              FOR APPROVAL OF EITHER Initiative No. 65 OR Alternative Measure No. 65 A
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              Ballot Measure 1
            </h3>
            <p
              class="kdHchw"
            >
              FOR Initiative Measure No. 65
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    class="kQCdaK"
  >
    <div
      class="cSkaik"
    >
      <div
        class="seal"
        data-testid="printed-ballot-seal"
        id="printedBallotSealContainer"
      >
        <img
          alt=""
          class="hLVAuh"
          data-testid="printed-ballot-seal-image"
          src="/seals/Seal_of_Mississippi_BW.svg"
        />
      </div>
      <div
        class="gmiWky ballot-header-content"
      >
        <h2>
          Unofficial TEST Ballot
        </h2>
        <h3>
          
           
          Mock General Election Choctaw 2020
        </h3>
        <p>
          August 26, 2020
          <br />
          Choctaw County
          , 
          State of Mississippi
        </p>
      </div>
      <div
        class="cfpKDm"
      >
        <div
          class="gScWpb"
        >
          <svg
            height="128"
            shape-rendering="crispEdges"
            viewBox="0 0 21 21"
            width="128"
          >
            <path
              d="M0,0 h21v21H0z"
              fill="#FFFFFF"
            />
            <path
              d="M0 0h7v1H0zM9 0h1v1H9zM14,0 h7v1H14zM0 1h1v1H0zM6 1h1v1H6zM10 1h2v1H10zM14 1h1v1H14zM20,1 h1v1H20zM0 2h1v1H0zM2 2h3v1H2zM6 2h1v1H6zM8 2h5v1H8zM14 2h1v1H14zM16 2h3v1H16zM20,2 h1v1H20zM0 3h1v1H0zM2 3h3v1H2zM6 3h1v1H6zM8 3h3v1H8zM12 3h1v1H12zM14 3h1v1H14zM16 3h3v1H16zM20,3 h1v1H20zM0 4h1v1H0zM2 4h3v1H2zM6 4h1v1H6zM9 4h3v1H9zM14 4h1v1H14zM16 4h3v1H16zM20,4 h1v1H20zM0 5h1v1H0zM6 5h1v1H6zM9 5h1v1H9zM11 5h2v1H11zM14 5h1v1H14zM20,5 h1v1H20zM0 6h7v1H0zM8 6h1v1H8zM10 6h1v1H10zM12 6h1v1H12zM14,6 h7v1H14zM3 8h2v1H3zM6 8h2v1H6zM12 8h1v1H12zM17 8h2v1H17zM0 9h2v1H0zM5 9h1v1H5zM7 9h2v1H7zM11 9h2v1H11zM15 9h3v1H15zM19,9 h2v1H19zM0 10h2v1H0zM5 10h4v1H5zM12 10h4v1H12zM17 10h1v1H17zM20,10 h1v1H20zM1 11h1v1H1zM3 11h2v1H3zM8 11h4v1H8zM15 11h2v1H15zM19 11h1v1H19zM0 12h1v1H0zM2 12h2v1H2zM6 12h1v1H6zM8 12h1v1H8zM14,12 h7v1H14zM8 13h2v1H8zM13 13h1v1H13zM18,13 h3v1H18zM0 14h7v1H0zM8 14h3v1H8zM13 14h2v1H13zM17 14h2v1H17zM20,14 h1v1H20zM0 15h1v1H0zM6 15h1v1H6zM9 15h3v1H9zM13 15h2v1H13zM18 15h1v1H18zM0 16h1v1H0zM2 16h3v1H2zM6 16h1v1H6zM8 16h2v1H8zM11 16h1v1H11zM14 16h1v1H14zM16 16h1v1H16zM18 16h2v1H18zM0 17h1v1H0zM2 17h3v1H2zM6 17h1v1H6zM8 17h2v1H8zM12 17h1v1H12zM15 17h2v1H15zM0 18h1v1H0zM2 18h3v1H2zM6 18h1v1H6zM9 18h1v1H9zM11 18h2v1H11zM15 18h3v1H15zM19,18 h2v1H19zM0 19h1v1H0zM6 19h1v1H6zM13 19h1v1H13zM15 19h1v1H15zM17 19h1v1H17zM19,19 h2v1H19zM0 20h7v1H0zM10 20h3v1H10zM14 20h3v1H14zM18 20h2v1H18z"
              fill="#000000"
            />
          </svg>
        </div>
        <div>
          <div>
            <div>
              <div>
                Precinct
              </div>
              <strong>
                District 5
              </strong>
            </div>
            <div>
              <div>
                Ballot Style
              </div>
              <strong>
                5
              </strong>
            </div>
            <div>
              <div>
                Ballot ID
              </div>
              <strong
                class="fUIxJs"
              >
                Asdf1234Asdf12
              </strong>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="NVkwn"
    >
      <div
        class="jgYCbw"
      >
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              President
            </h3>
            <p
              class="eSpfPW"
            >
              <span
                class="hsgYyE"
              >
                WRITE-IN
              </span>
               
              (write-in)
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              Senate 
            </h3>
            <p
              class="eSpfPW"
            >
              <span
                class="hsgYyE"
              >
                WRITE-IN
              </span>
               
              (write-in)
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              1st Congressional District
            </h3>
            <p
              class="eSpfPW"
            >
              <span
                class="hsgYyE"
              >
                Antonia Eliason
              </span>
               
              / Democrat
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              Supreme Court District 3(Northern) Position 3
            </h3>
            <p
              class="eSpfPW"
            >
              <span
                class="hsgYyE"
              >
                Josiah Dennis Coleman
              </span>
               
              / Nonpartisan
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              Election Commissioner 05
            </h3>
            <p
              class="eSpfPW"
            >
              <span
                class="hsgYyE"
              >
                Ouida A Loper
              </span>
               
              / Independent
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              School Board 05
            </h3>
            <p
              class="eSpfPW"
            >
              <span
                class="hsgYyE"
              >
                WRITE-IN
              </span>
               
              (write-in)
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              Ballot Measure 2
House Concurrent Resolution No. 47
            </h3>
            <p
              class="kdHchw"
            >
              NO
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              Ballot Measure 3
House Bill 1796 - Flag Referendum
            </h3>
            <p
              class="kdHchw"
            >
              NO
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              Ballot Measure 1
            </h3>
            <p
              class="kdHchw"
            >
              AGAINST BOTH Initiative Measure No. 65 AND Alternative Measure No. 65 A
            </p>
          </div>
        </div>
        <div
          class="gkFLxJ"
        >
          <div
            class="eDCLhO vjIZd"
          >
            <h3>
              Ballot Measure 1
            </h3>
            <p
              class="kdHchw"
            >
              FOR Alternative Measure 65 A
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`L&A (logic and accuracy) flow 3`] = `
@media (min-width:1024px) {

}

@media (min-width:1440px) {

}

<div>
  <div>
    <h1>
      Mocked HMPB
    </h1>
    <p>
      Election: 
      Mock General Election Choctaw 2020
    </p>
    <p>
      Ballot Style: 
      5
    </p>
    <p>
      Precinct: 
      District 5
    </p>
    <p>
      Absentee: 
      false
    </p>
    <p>
      Ballot Mode: 
      test
    </p>
  </div>
  <div>
    <h1>
      Mocked HMPB
    </h1>
    <p>
      Election: 
      Mock General Election Choctaw 2020
    </p>
    <p>
      Ballot Style: 
      5
    </p>
    <p>
      Precinct: 
      District 5
    </p>
    <p>
      Absentee: 
      false
    </p>
    <p>
      Ballot Mode: 
      test
    </p>
  </div>
  <div>
    <h1>
      Mocked HMPB
    </h1>
    <p>
      Election: 
      Mock General Election Choctaw 2020
    </p>
    <p>
      Ballot Style: 
      5
    </p>
    <p>
      Precinct: 
      District 5
    </p>
    <p>
      Absentee: 
      false
    </p>
    <p>
      Ballot Mode: 
      test
    </p>
  </div>
  <div>
    <h1>
      Mocked HMPB
    </h1>
    <p>
      Election: 
      Mock General Election Choctaw 2020
    </p>
    <p>
      Ballot Style: 
      5
    </p>
    <p>
      Precinct: 
      District 5
    </p>
    <p>
      Absentee: 
      false
    </p>
    <p>
      Ballot Mode: 
      test
    </p>
  </div>
  <div>
    <h1>
      Mocked HMPB
    </h1>
    <p>
      Election: 
      Mock General Election Choctaw 2020
    </p>
    <p>
      Ballot Style: 
      5
    </p>
    <p>
      Precinct: 
      District 5
    </p>
    <p>
      Absentee: 
      false
    </p>
    <p>
      Ballot Mode: 
      test
    </p>
  </div>
  <div>
    <h1>
      Mocked HMPB
    </h1>
    <p>
      Election: 
      Mock General Election Choctaw 2020
    </p>
    <p>
      Ballot Style: 
      5
    </p>
    <p>
      Precinct: 
      District 5
    </p>
    <p>
      Absentee: 
      false
    </p>
    <p>
      Ballot Mode: 
      test
    </p>
  </div>
  <div>
    <h1>
      Mocked HMPB
    </h1>
    <p>
      Election: 
      Mock General Election Choctaw 2020
    </p>
    <p>
      Ballot Style: 
      5
    </p>
    <p>
      Precinct: 
      District 5
    </p>
    <p>
      Absentee: 
      false
    </p>
    <p>
      Ballot Mode: 
      test
    </p>
  </div>
</div>
`;

exports[`tabulating CVRs 1`] = `
<div>
  <div
    class="hfPnIU"
  >
    <section
      class="hfivsF"
      data-testid="election-full-tally-report"
    >
      <img
        alt="VotingWorks logo"
        class="byCqlY"
        src="/votingworks-wordmark-black.svg"
      />
      <div
        class="kuXZyB"
      >
        <h1>
          Official
           
          Mock General Election Choctaw 2020
           Tally Report
        </h1>
        <p>
          Wednesday, August 26, 2020
          , 
          Choctaw County
          , 
          State of Mississippi
          <br />
          <span
            class="iybVtA"
          >
            This report was created on 
            Tuesday, November 3, 2020, 10:22:00 PM UTC
            .
          </span>
        </p>
      </div>
      <div
        class="zVyqD"
      >
        <div
          class="cNiWWZ"
        >
          <h3>
            Ballots by Voting Method
          </h3>
          <table
            class="gyNoQG"
            data-testid="voting-method-table"
          >
            <tbody>
              <tr
                data-testid="absentee"
              >
                <td
                  class="crFDJf"
                >
                  Absentee
                </td>
                <td
                  class="dIqrGb"
                >
                  50
                </td>
              </tr>
              <tr
                data-testid="standard"
              >
                <td
                  class="crFDJf"
                >
                  Precinct
                </td>
                <td
                  class="dIqrGb"
                >
                  50
                </td>
              </tr>
              <tr
                data-testid="total"
              >
                <td
                  class="crFDJf"
                >
                  <strong>
                    Total Ballots Cast
                  </strong>
                </td>
                <td
                  class="dIqrGb"
                >
                  <strong>
                    100
                  </strong>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          class="dxhxtV"
        >
          <div
            class="kuXZyB"
            data-testid="results-table-775020876"
          >
            <p
              class="iybVtA"
            >
              United States
            </p>
            <h3>
              President
            </h3>
            <p
              class="iybVtA"
            >
              <span
                class="fUIxJs"
              >
                100 ballots
                 cast /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                1 overvote
                 /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                7 undervotes
              </span>
            </p>
            <table
              class="fqMSrf"
            >
              <tbody>
                <tr
                  data-testid="775020876-775031988"
                >
                  <th
                    colspan="3"
                  >
                    Presidential Electors for Joe Biden for President and Kamala Harris for Vice President
                  </th>
                  <td>
                    27
                  </td>
                </tr>
                <tr
                  data-testid="775020876-775031987"
                >
                  <th
                    colspan="3"
                  >
                    Presidential Electors for Donald J. Trump for President and Michael R. Pence for Vice President
                  </th>
                  <td>
                    36
                  </td>
                </tr>
                <tr
                  data-testid="775020876-775031989"
                >
                  <th
                    colspan="3"
                  >
                    Presidential Electors for Phil Collins for President and Bill Parker for Vice President
                  </th>
                  <td>
                    29
                  </td>
                </tr>
                <tr
                  data-testid="775020876-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td>
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="dxhxtV"
        >
          <div
            class="kuXZyB"
            data-testid="results-table-775020877"
          >
            <p
              class="iybVtA"
            >
              United States
            </p>
            <h3>
              Senate 
            </h3>
            <p
              class="iybVtA"
            >
              <span
                class="fUIxJs"
              >
                100 ballots
                 cast /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                4 overvotes
                 /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                4 undervotes
              </span>
            </p>
            <table
              class="fqMSrf"
            >
              <tbody>
                <tr
                  data-testid="775020877-775031985"
                >
                  <th
                    colspan="3"
                  >
                    Mike Espy
                  </th>
                  <td>
                    29
                  </td>
                </tr>
                <tr
                  data-testid="775020877-775031986"
                >
                  <th
                    colspan="3"
                  >
                    Cindy Hyde-Smith
                  </th>
                  <td>
                    35
                  </td>
                </tr>
                <tr
                  data-testid="775020877-775031990"
                >
                  <th
                    colspan="3"
                  >
                    Jimmy Edwards
                  </th>
                  <td>
                    28
                  </td>
                </tr>
                <tr
                  data-testid="775020877-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td>
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="dxhxtV"
        >
          <div
            class="kuXZyB"
            data-testid="results-table-775020872"
          >
            <p
              class="iybVtA"
            >
              US House Of Representatives
            </p>
            <h3>
              1st Congressional District
            </h3>
            <p
              class="iybVtA"
            >
              <span
                class="fUIxJs"
              >
                100 ballots
                 cast /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                3 overvotes
                 /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                5 undervotes
              </span>
            </p>
            <table
              class="fqMSrf"
            >
              <tbody>
                <tr
                  data-testid="775020872-775031978"
                >
                  <th
                    colspan="3"
                  >
                    Antonia Eliason
                  </th>
                  <td>
                    46
                  </td>
                </tr>
                <tr
                  data-testid="775020872-775031979"
                >
                  <th
                    colspan="3"
                  >
                    Trent Kelly
                  </th>
                  <td>
                    46
                  </td>
                </tr>
                <tr
                  data-testid="775020872-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td>
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="dxhxtV"
        >
          <div
            class="kuXZyB"
            data-testid="results-table-775020870"
          >
            <p
              class="iybVtA"
            >
              Northern District
            </p>
            <h3>
              Supreme Court District 3(Northern) Position 3
            </h3>
            <p
              class="iybVtA"
            >
              <span
                class="fUIxJs"
              >
                100 ballots
                 cast /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                5 undervotes
              </span>
            </p>
            <table
              class="fqMSrf"
            >
              <tbody>
                <tr
                  data-testid="775020870-775031976"
                >
                  <th
                    colspan="3"
                  >
                    Josiah Dennis Coleman
                  </th>
                  <td>
                    37
                  </td>
                </tr>
                <tr
                  data-testid="775020870-775031993"
                >
                  <th
                    colspan="3"
                  >
                    Percy L. Lynchard
                  </th>
                  <td>
                    58
                  </td>
                </tr>
                <tr
                  data-testid="775020870-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td>
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="dxhxtV"
        >
          <div
            class="kuXZyB"
            data-testid="results-table-775020899"
          >
            <p
              class="iybVtA"
            >
              Election Commissioner 01
            </p>
            <h3>
              Election Commissioner  01
            </h3>
            <p
              class="iybVtA"
            >
              <span
                class="fUIxJs"
              >
                18 ballots
                 cast /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                1 undervote
              </span>
            </p>
            <table
              class="fqMSrf"
            >
              <tbody>
                <tr
                  data-testid="775020899-775032015"
                >
                  <th
                    colspan="3"
                  >
                    Glynda Chaney Fulce
                  </th>
                  <td>
                    17
                  </td>
                </tr>
                <tr
                  data-testid="775020899-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td>
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="dxhxtV"
        >
          <div
            class="kuXZyB"
            data-testid="results-table-775020900"
          >
            <p
              class="iybVtA"
            >
              Election Commissioner 02
            </p>
            <h3>
              Election Commissioner 02
            </h3>
            <p
              class="iybVtA"
            >
              <span
                class="fUIxJs"
              >
                15 ballots
                 cast /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                1 undervote
              </span>
            </p>
            <table
              class="fqMSrf"
            >
              <tbody>
                <tr
                  data-testid="775020900-775032016"
                >
                  <th
                    colspan="3"
                  >
                    Charles Beck
                  </th>
                  <td>
                    5
                  </td>
                </tr>
                <tr
                  data-testid="775020900-775032017"
                >
                  <th
                    colspan="3"
                  >
                    Sharon Brooks
                  </th>
                  <td>
                    9
                  </td>
                </tr>
                <tr
                  data-testid="775020900-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td>
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="dxhxtV"
        >
          <div
            class="kuXZyB"
            data-testid="results-table-775020901"
          >
            <p
              class="iybVtA"
            >
              Election Commissioner 03
            </p>
            <h3>
              Election Commissioner 03
            </h3>
            <p
              class="iybVtA"
            >
              <span
                class="fUIxJs"
              >
                23 ballots
                 cast /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                1 undervote
              </span>
            </p>
            <table
              class="fqMSrf"
            >
              <tbody>
                <tr
                  data-testid="775020901-775032018"
                >
                  <th
                    colspan="3"
                  >
                    Dorothy Anderson
                  </th>
                  <td>
                    22
                  </td>
                </tr>
                <tr
                  data-testid="775020901-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td>
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="dxhxtV"
        >
          <div
            class="kuXZyB"
            data-testid="results-table-775020902"
          >
            <p
              class="iybVtA"
            >
              Election Commissioner 04
            </p>
            <h3>
              Election Commissioner 04
            </h3>
            <p
              class="iybVtA"
            >
              <span
                class="fUIxJs"
              >
                25 ballots
                 cast /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                1 overvote
                 /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 undervotes
              </span>
            </p>
            <table
              class="fqMSrf"
            >
              <tbody>
                <tr
                  data-testid="775020902-775032019"
                >
                  <th
                    colspan="3"
                  >
                    Willie Mae Guillory
                  </th>
                  <td>
                    10
                  </td>
                </tr>
                <tr
                  data-testid="775020902-775032020"
                >
                  <th
                    colspan="3"
                  >
                    Lewis Wright
                  </th>
                  <td>
                    14
                  </td>
                </tr>
                <tr
                  data-testid="775020902-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td>
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="dxhxtV"
        >
          <div
            class="kuXZyB"
            data-testid="results-table-775020903"
          >
            <p
              class="iybVtA"
            >
              Election Commissioner 05
            </p>
            <h3>
              Election Commissioner 05
            </h3>
            <p
              class="iybVtA"
            >
              <span
                class="fUIxJs"
              >
                19 ballots
                 cast /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                2 overvotes
                 /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                2 undervotes
              </span>
            </p>
            <table
              class="fqMSrf"
            >
              <tbody>
                <tr
                  data-testid="775020903-775032021"
                >
                  <th
                    colspan="3"
                  >
                    Ouida A Loper
                  </th>
                  <td>
                    9
                  </td>
                </tr>
                <tr
                  data-testid="775020903-775032022"
                >
                  <th
                    colspan="3"
                  >
                    Wayne McLeod
                  </th>
                  <td>
                    6
                  </td>
                </tr>
                <tr
                  data-testid="775020903-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td>
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="dxhxtV"
        >
          <div
            class="kuXZyB"
            data-testid="results-table-775020904"
          >
            <p
              class="iybVtA"
            >
              School Board District 5
            </p>
            <h3>
              School Board 05
            </h3>
            <p
              class="iybVtA"
            >
              <span
                class="fUIxJs"
              >
                19 ballots
                 cast /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                0 undervotes
              </span>
            </p>
            <table
              class="fqMSrf"
            >
              <tbody>
                <tr
                  data-testid="775020904-775032023"
                >
                  <th
                    colspan="3"
                  >
                    Michael D Thomas
                  </th>
                  <td>
                    19
                  </td>
                </tr>
                <tr
                  data-testid="775020904-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td>
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="dxhxtV"
        >
          <div
            class="kuXZyB"
            data-testid="results-table-750000017"
          >
            <p
              class="iybVtA"
            >
              State Of Mississippi
            </p>
            <h3>
              Ballot Measure 2
House Concurrent Resolution No. 47
            </h3>
            <p
              class="iybVtA"
            >
              <span
                class="fUIxJs"
              >
                100 ballots
                 cast /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                2 overvotes
                 /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                5 undervotes
              </span>
            </p>
            <table
              class="fqMSrf"
            >
              <tbody>
                <tr
                  data-testid="750000017-yes"
                >
                  <th
                    colspan="3"
                  >
                    Yes
                  </th>
                  <td>
                    40
                  </td>
                </tr>
                <tr
                  data-testid="750000017-no"
                >
                  <th
                    colspan="3"
                  >
                    No
                  </th>
                  <td>
                    53
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="dxhxtV"
        >
          <div
            class="kuXZyB"
            data-testid="results-table-750000018"
          >
            <p
              class="iybVtA"
            >
              State Of Mississippi
            </p>
            <h3>
              Ballot Measure 3
House Bill 1796 - Flag Referendum
            </h3>
            <p
              class="iybVtA"
            >
              <span
                class="fUIxJs"
              >
                100 ballots
                 cast /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                3 overvotes
                 /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                2 undervotes
              </span>
            </p>
            <table
              class="fqMSrf"
            >
              <tbody>
                <tr
                  data-testid="750000018-yes"
                >
                  <th
                    colspan="3"
                  >
                    Yes
                  </th>
                  <td>
                    43
                  </td>
                </tr>
                <tr
                  data-testid="750000018-no"
                >
                  <th
                    colspan="3"
                  >
                    No
                  </th>
                  <td>
                    52
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="dxhxtV"
        >
          <div
            class="kuXZyB"
            data-testid="results-table-750000015"
          >
            <p
              class="iybVtA"
            >
              State Of Mississippi
            </p>
            <h3>
              Ballot Measure 1
            </h3>
            <p
              class="iybVtA"
            >
              <span
                class="fUIxJs"
              >
                100 ballots
                 cast /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                3 overvotes
                 /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                4 undervotes
              </span>
            </p>
            <table
              class="fqMSrf"
            >
              <tbody>
                <tr
                  data-testid="750000015-yes"
                >
                  <th
                    colspan="3"
                  >
                    Yes
                  </th>
                  <td>
                    39
                  </td>
                </tr>
                <tr
                  data-testid="750000015-no"
                >
                  <th
                    colspan="3"
                  >
                    No
                  </th>
                  <td>
                    54
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="dxhxtV"
        >
          <div
            class="kuXZyB"
            data-testid="results-table-750000016"
          >
            <p
              class="iybVtA"
            >
              State Of Mississippi
            </p>
            <h3>
              Ballot Measure 1
            </h3>
            <p
              class="iybVtA"
            >
              <span
                class="fUIxJs"
              >
                100 ballots
                 cast /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                4 overvotes
                 /
              </span>
               
              <span
                class="fUIxJs"
              >
                 
                6 undervotes
              </span>
            </p>
            <table
              class="fqMSrf"
            >
              <tbody>
                <tr
                  data-testid="750000016-yes"
                >
                  <th
                    colspan="3"
                  >
                    Yes
                  </th>
                  <td>
                    40
                  </td>
                </tr>
                <tr
                  data-testid="750000016-no"
                >
                  <th
                    colspan="3"
                  >
                    No
                  </th>
                  <td>
                    50
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;
